--- a/fetchy-app/src/components/ConceptList/ConcepList.css
+++ b/fetchy-app/src/components/ConceptList/ConcepList.css
@@ -1,3 +1,11 @@
 .concepto-coincidente{
     list-style: none;
 }
+.btn-añdir-concepto{
+    width: 100%;
+    text-align: center;
+    border: none;
+    padding: 10px 0px;
+    border-radius: 5px;
+    background-color: rgb(132, 44, 221);
+}
